overlays/dev/frontend/merge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: www.dev.zkcartcc.org
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - www.dev.zkcartcc.org
      secretName: www-zkcartcc-org-tls
